--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 html,
 body {
-/*  min-height: 100vh;*/
+  /*  min-height: 100vh;*/
   margin: 0;
 }
 
@@ -73,10 +73,11 @@ h1 {
 .slider {
   outline: 1px dotted red;
   position: relative;
-  padding-top: 394px;
+  padding-top: 321px;
   text-align: center;
   color: #ffffff;
   width: 1200px;
+  z-index: 1;
 }
 
 .slide {
@@ -102,32 +103,33 @@ h1 {
   color: #ffffff;
   text-decoration: none;
   text-shadow: 0 2px 5px rgba(160, 32, 11, 0.76);
-
   background: #f26843;
-  background:    -moz-linear-gradient(top, #f26843 0%, #e74a35 100%);
+  background: -moz-linear-gradient(top, #f26843 0%, #e74a35 100%);
   background: -webkit-linear-gradient(top, #f26843 0%, #e74a35 100%);
-  background:         linear-gradient(to bottom, #f26843 0%, #e74a35 100%);
+  background: linear-gradient(to bottom, #f26843 0%, #e74a35 100%);
   border-radius: 100px;
   box-shadow: 0 2px 2px rgba(172, 16, 0, 0.64);
 }
+
 .slide-btn:hover {
-  background:    -moz-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
+  background: -moz-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
   background: -webkit-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
-  background:         linear-gradient(to bottom, #f58669 0%, #ec6f5e 100%);
+  background: linear-gradient(to bottom, #f58669 0%, #ec6f5e 100%);
   box-shadow: 0 2px 2px rgba(172, 16, 0, 1);
 }
 
 .slide-btn:active {
-  background:    -moz-linear-gradient(top, #d84732 0%, #e1613e 100%);
+  background: -moz-linear-gradient(top, #d84732 0%, #e1613e 100%);
   background: -webkit-linear-gradient(top, #d84732 0%, #e1613e 100%);
-  background:         linear-gradient(to bottom, #d84732 0%, #e1613e 100%);
+  background: linear-gradient(to bottom, #d84732 0%, #e1613e 100%);
   box-shadow: inset 0 2px 2px rgba(172, 16, 0, 1);
 }
 
 .slider-controls {
   position: absolute;
   bottom: 22px;
-  left: 27px;;
+  left: 27px;
+  ;
   z-index: 20;
   font-size: 0;
 }
@@ -171,9 +173,12 @@ h1 {
   display: block;
 }
 
+
 /*слайдер*/
 
+
 /*красная кнопка общие свойства*/
+
 .red-btn {
   display: flex;
   justify-content: center;
@@ -190,24 +195,22 @@ h1 {
 }
 
 .btn-item-hover {
-color: #fefefe;
-font-family: Roboto;
-font-size: 18px;
-font-weight: 700;
-line-height: 24px;
+  color: #fefefe;
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 24px;
   padding: 13px 17px;
-  
-/*
+  /*
 width: 200px;
 height: 44px;
 */
   box-sizing: border-box;
-box-shadow: 0 1px 2px #ac1000;
-background-color: #e84d37;
-background-image: linear-gradient(to top, #e74a35 0%, #f26843 100%);
+  box-shadow: 0 1px 2px #ac1000;
+  background-color: #e84d37;
+  background-image: linear-gradient(to top, #e74a35 0%, #f26843 100%);
   z-index: 10;
 }
-
 
 .red-btn:hover {
   background: -moz-linear-gradient(top, #f58669 0%, #ec6f5e 100%);
@@ -226,33 +229,46 @@ background-image: linear-gradient(to top, #e74a35 0%, #f26843 100%);
 .header-container {
   display: flex;
   /*  align-items: center;*/
-  min-width: 100%;
+  /*  min-width: 100%;*/
   position: relative;
 }
 
 .header-container img {
-  outline: 1px dotted red;
+  /*  outline: 1px dotted red;*/
+  /*
   position: absolute;
   top: 9px;
   left: 25px;
+*/
+  margin: 9px 0 0 25px;
 }
 
 .main-navigation {
   display: flex;
+  justify-content: center;
+  outline: 2px dotted black;
+  min-height: 15px;
+  height: 20px;
   /*  padding: 24px 0 0 168px;*/
+  /*
   position: absolute;
   top: 24px;
   left: 189px;
+*/
+  margin: 24px 0 0 11px;
 }
 
 .main-navigation ul {
   margin: 0;
   padding: 0;
+  /*  outline: 5px dotted red;*/
+  height: 20px;
 }
 
 .main-menu {
-  outline: 1px dotted red;
+  outline: 5px dotted green;
   display: flex;
+  justify-content: center;
   align-items: flex-start;
   margin: 0;
   padding: 0;
@@ -280,7 +296,7 @@ background-image: linear-gradient(to top, #e74a35 0%, #f26843 100%);
   content: "";
   display: block;
   height: 1px;
-  background-color: rgba(255, 255, 255, .4);
+  background-color: rgba(255, 255, 255, 0.4);
 }
 
 .main-menu>li {
@@ -308,6 +324,7 @@ background-image: linear-gradient(to top, #e74a35 0%, #f26843 100%);
   display: none;
   position: absolute;
   top: 30px;
+  left: 0;
   /*  если ставлю больше значение то подменю пропадает без возможности выбора*/
   width: 143px;
   margin: 0;
@@ -348,12 +365,17 @@ background-image: linear-gradient(to top, #e74a35 0%, #f26843 100%);
 }
 
 .user-block {
+  /*
   position: absolute;
   top: 23px;
   right: 27px;
+*/
+  outline: 5px dotted red;
   display: flex;
   height: 32px;
   width: 261px;
+  margin: 22px 0 0 345px;
+  z-index: 100;
 }
 
 .user-block-btn {
@@ -548,11 +570,11 @@ background-image: linear-gradient(to top, #e74a35 0%, #f26843 100%);
   outline: 1px dotted red;
   display: flex;
   justify-content: space-around;
-      margin: 0 27px;
+  margin: 0 27px;
   margin-top: 40px;
   height: 229px;
-  
 }
+
 .content-profitable p {
   margin-top: 14px;
 }
@@ -575,25 +597,23 @@ background-image: linear-gradient(to top, #e74a35 0%, #f26843 100%);
   background-repeat: no-repeat;
   padding: 17px 20px 22px 19px;
 }
+
 .raspberry-share p,
 .chocolate-share p {
-color: #ffffff;
-font-family: Roboto;
-font-size: 18px;
-font-weight: 700;
-line-height: 22px;
-/*  margin: 0;*/
-  
-  
+  color: #ffffff;
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 22px;
+  /*  margin: 0;*/
 }
+
 .raspberry-share h2,
 .chocolate-share h2 {
   margin: 0;
-font-size: 35px;
-font-weight: 700;
-line-height: 41px;
-  
-
+  font-size: 35px;
+  font-weight: 700;
+  line-height: 41px;
 }
 
 .wrapper-ice-item {
@@ -605,13 +625,14 @@ line-height: 41px;
 }
 
 .ice-item {
+  position: relative;
   outline: 1px dotted red;
   display: flex;
   flex-direction: column;
   align-items: center;
   margin: 0 0px 17px 18px;
   position: relative;
-/*  min-height: 405px;*/
+  /*  min-height: 405px;*/
   min-height: 332px;
   width: 277px;
   z-index: 10;
@@ -619,23 +640,22 @@ line-height: 41px;
   justify-content: flex-start;
 }
 
-/*
-.ice-item:nth-child(1),
-.ice-item:nth-child(1n+4){
-  margin-left: 14px; 
-  margin-right: 0;
+.ice-item::before {
+  content: "";
+  position: absolute;
+  background-image: url(../img/spritesheet.png);
+  background-repeat: no-repeat;
+  width: 61px;
+  height: 61px;
+  background-position: -123px -97px;
+  top: 0;
+  left: 6px;
 }
-.ice-item:nth-child(4n){
-  margin-left: 0;
-  margin-right: 5px;
-}
-*/
-
 
 .ice-item-price {
   position: absolute;
-  top: 214px;
-  left: 0;
+  top: 204px;
+  left: 3px;
   font-size: 45px;
 }
 
@@ -643,23 +663,21 @@ line-height: 41px;
   outline: 1px dotted red;
   display: flex;
   justify-content: center;
-  margin-top: 20px;
-  /*   почему не срабатывает?*/
+  margin-top: 15px;
   width: 256px;
   font-size: 16px;
   text-align: center;
-  margin: 0 auto;
+  /*  margin: 0 auto;*/
 }
 
 .hover-block {
-  background-color: #f8f7f4;
-  opacity: 0.3;
+  background-color: rgba(248, 247, 244, 0.3);
   width: 293px;
   height: 405px;
   position: absolute;
   top: 0;
   left: -5;
-  z-index: 1;
+  z-index: -10;
   display: none;
 }
 
@@ -680,58 +698,125 @@ line-height: 41px;
   box-shadow: 0 2px 2px rgba(85, 8, 0, .54);
   position: absolute;
   bottom: 10px;
-  left: 30px;
+  left: 40px;
   z-index: 10;
   /*  не могу понять почему кнопка наверх не выходит*/
 }
 
 .ice-item:hover .hover-block {
   display: block;
+  z-index: 11;
 }
 
 .about-shop {
   outline: 1px dotted red;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
   align-items: stretch;
   flex-wrap: wrap;
-  margin-top: 40px;
-  padding-top: 0;
+  height: 306px;
+  margin: 14px 28px 0px 27px;
+  padding: 24px 33px 26px 20px;
+  background-color: #eadcbe;
+  background-image: url(../img/bg-waffles.png);
+  background-repeat: repeat-x;
+  border-radius: 15px;
+  box-sizing: border-box;
 }
 
 .about-shop>h2 {
   outline: 1px dotted red;
-  width: 100%;
-  padding: 0 30px;
+  /*  height: 54px;*/
+  margin: 0;
+  color: #323232;
+  font-family: Roboto;
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 30px;
 }
 
 .about-shop>p {
   outline: 1px dotted red;
-  width: 40%;
-  padding: auto;
-  margin-left: 40px;
+      margin: 23px -9px 0 56px;
+  width: 478px;
+  color: #323232;
+  font-family: Roboto;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 22px;
+  position: relative;
+}
+.about-shop p:nth-child(1)::before {
+/*  спрайт не срабатывает. не пойму почему*/
+  content: "";
+  display: block;
+  position: absolute;
+  background-image: url(../img/spritesheet.png);
+  background-repeat: no-repeat;
+      width: 49px;
+    height: 49px;
+    background-position: -63px -5px;
+  top: 10px;
+  left: 10px;
 }
 
 .block-news-subscribe {
   outline: 1px dotted red;
   display: flex;
   justify-content: space-between;
-  align-items: stretch;
-  margin-top: 40px;
+  align-items: flex-start;
+  margin: 40px 27px 0 27px; 
+  border-radius: 15px;
+  background-image: url(../img/bg-news.png);
+  background-repeat: no-repeat;
+/*  box-sizing: border-box;*/
 }
 
 .news-blog {
   outline: 1px dotted red;
-  display: block;
+/*  display: block;*/
   width: 560px;
   min-height: 220px;
+  padding: 22px 0px 0px 20px;
+}
+.news-blog p {
+color: #323232;
+font-size: 16px;
+font-weight: 500;
+line-height: 22px;
+      margin: 0;
+    margin-bottom: 5px;
+}
+.news-blog h3{
+  display: flex;
+  justify-content: flex-start;
+margin: 0;
+width: 290px;
+}
+.news-blog a{
+color: #323232;
+font-size: 24px;
+font-weight: 700;
+line-height: 30px;
+  margin: 0;
+}
+.news-blog a:hover, 
+.news-blog a:active {
+  text-decoration:underline;
+    color: #e84d37;
+/*    border-bottom-color: rgba(232 77 55 1 0.3);*/
 }
 
 .subscribe {
   outline: 1px dotted red;
-  display: block;
+/*  display: block;*/
   width: 560px;
   min-height: 220px;
+  background-image: url(../img/bg-email.png);
+  background-repeat: no-repeat;
+/*  margin: 5px 0 0 px;*/
+  margin-left: 25px;
+  padding: 5px;
 }
 
 .map-wrapper {
@@ -785,15 +870,17 @@ line-height: 41px;
   justify-content: space-between;
   align-items: center;
   min-height: 103px;
-  width: 100%
+  width: 100%;
+
+    
 }
 
 .footer-social {
   outline: 1px dotted red;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
-  flex-basis: 185px;
+/*  flex-basis: 185px;*/
 }
 
 .footer-info {
@@ -874,10 +961,9 @@ line-height: 41px;
 
 .social-btn {
   display: flex;
-  width: 100px;
-  height: 100px;
-  background-color: aqua;
-  margin-right: 30px;
+  width: 32px;
+  height: 32px;
+ 
   border-radius: 50%;
   padding: auto;
   box-sizing: border-box;
@@ -979,34 +1065,92 @@ line-height: 41px;
   display: table;
   clear: both;
 }
+
 .profitable-btn-left,
-.profitable-btn-right
-{
+.profitable-btn-right {
   /* Style for "Подложка" */
   width: 165px;
   height: 46px;
-box-shadow: 0 2px 2px rgba(172, 16, 0, 0.64);
-background-color: #ffffff;
-background-image: linear-gradient(to top, #e74a35 0%, #f26843 100%);
-opacity: 0.99;
+  box-shadow: 0 2px 2px rgba(172, 16, 0, 0.64);
+  background-color: #ffffff;
+  background-image: linear-gradient(to top, #e74a35 0%, #f26843 100%);
+  opacity: 0.99;
   /* Style for "Хочу варен" */
-color: #ffffff;
-font-family: Roboto;
-font-size: 18px;
-font-weight: 700;
-line-height: 24px;
+  color: #ffffff;
+  font-family: Roboto;
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 24px;
   text-decoration: none;
-/*  padding: 15px 24px 14px 22px;*/
+  /*  padding: 15px 24px 14px 22px;*/
   margin: 45px 0 0 355px;
-/*  box-sizing: border-box;*/
- 
+  /*  box-sizing: border-box;*/
 }
+
 .profitable-btn-right {
   margin: 45px 0 0 332px;
   width: 189px;
-
 }
 
 .kg {
   font-size: 30px;
+}
+.subscribe-base {
+width: 549px;
+height: 210px;
+border-radius: 9px;
+background-color: #f8f7f4;
+  
+  padding: 32px 0 0 21px;
+  box-sizing: border-box;
+}
+
+.subscribe-base p {
+color: #5a5a5a;
+font-size: 16px;
+font-weight: 400;
+line-height: 22px;
+    margin: 0;
+  width: 510px;
+  margin-bottom: 33px;
+}
+.subscribe-base input {
+  display: inline-block;
+width: 367px;
+height: 44px;
+border-radius: 4px;
+border: 1px solid rgba(178, 178, 178, 0.52);
+background-color: #ffffff;
+  box-sizing: border-box;
+}
+
+#email {
+  padding: 15px;
+color: #999999;
+font-size: 16px;
+font-weight: 400;
+line-height: 24px;
+  
+}
+
+
+
+.email-btn {
+  display: inline-block;
+
+width: 129px;
+height: 44px;
+box-shadow: 0 2px 2px rgba(172, 16, 0, 0.64);
+background-color: #e84d37;
+background-image: linear-gradient(to top, #e74a35 0%, #f26843 100%);
+  
+
+
+color: #fefefe;
+
+font-size: 18px;
+font-weight: 700;
+line-height: 24px;
+  
+  margin-left: 7px;
 }
