--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,6 @@ h1 {
   position: absolute;
   bottom: 22px;
   left: 27px;
-  ;
   z-index: 20;
   font-size: 0;
 }
@@ -276,7 +275,7 @@ height: 44px;
   white-space: nowrap;
 }
 
-.main-menu a::after {
+.index-menu>li>a::after {
   content: "";
   display: block;
   height: 1px;
@@ -348,6 +347,7 @@ height: 44px;
   font-weight: 700;
   line-height: 16px;
   border-bottom: 1px solid rgba(50, 50, 50, 0.2);
+/*  text-decoration: none;*/
 }
 
 .user-block {
@@ -754,19 +754,15 @@ height: 44px;
 
 .ice-item {
   position: relative;
-  /*  outline: 1px dotted red;*/
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
   margin: 0 0px 17px 18px;
-  position: relative;
-  /*  min-height: 405px;*/
   min-height: 332px;
   width: 277px;
   z-index: 10;
   margin-bottom: 17px;
-  
 }
 
 .ice-item-hit::before {
@@ -805,7 +801,7 @@ height: 44px;
   height: 405px;
   position: absolute;
   top: 0;
-  left: -5;
+/*  left: -5px;*/
   z-index: 10;
   display: none;
 }
@@ -834,10 +830,12 @@ height: 44px;
 .kg {
   font-size: 30px;
 }
+ice-item:hover {
+  z-index: 11;
+}
 
 .ice-item:hover .hover-block {
   display: block;
-  z-index: 11;
 }
 
 .about-shop {
@@ -861,7 +859,6 @@ height: 44px;
   /*  height: 54px;*/
   margin: 0;
   color: #323232;
-  font-family: Roboto;
   font-size: 24px;
   font-weight: 500;
   line-height: 30px;
@@ -872,26 +869,12 @@ height: 44px;
   margin: 23px -9px 0 56px;
   width: 478px;
   color: #323232;
-  font-family: Roboto;
   font-size: 16px;
   font-weight: 400;
   line-height: 22px;
   position: relative;
 }
 
-.about-shop p:nth-child(1)::before {
-  /*  спрайт не срабатывает. не пойму почему*/
-  content: "";
-  display: block;
-  position: absolute;
-  background-image: url(../img/spritesheet.png);
-  background-repeat: no-repeat;
-  width: 49px;
-  height: 49px;
-  background-position: -63px -5px;
-  top: 10px;
-  left: 10px;
-}
 
 .block-news-subscribe {
   /*  outline: 1px dotted red;*/
@@ -956,8 +939,10 @@ height: 44px;
 }
 
 .map-wrapper {
-  /*  outline: 1px dotted red;*/
-  min-width: 1200px;
+/*    outline: 1px dotted red;*/
+  width: 1200px;
+  margin: 0 auto;
+  padding: 0 20px;
   margin-top: 18px;
 }
 
@@ -966,38 +951,66 @@ height: 44px;
   background-image: url(../img/map.jpg);
   background-repeat: no-repeat;
   min-height: 430px;
-  min-width: 1200px;
+  width: 1200px;
   background-size: cover;
 }
 
 .map-contact {
+  position: relative;
   /*  outline: 1px dotted red;*/
   display: flex;
   flex-direction: column;
-  margin-left: auto;
+/*  align-items: flex-start;*/
+
   width: 302px;
   height: 305px;
-  background-color: #fffefc;
+  background-color: rgba(255, 255, 255, 0.98);
   border-radius: 15px;
-  display: none;
+  padding: 28px 25px;
+/*  display: none;*/
+  box-sizing: border-box;
+  color: #323232;
+
 }
 
-.map-contact>p {
-  color: #323232;
+
+.map-contact p {
+  margin: 0;
   font-size: 14px;
   font-weight: 400;
   line-height: 20px;
 }
+.map-contact p:first-child {
+  margin-bottom: 17px;
+}
+.map-contact p:nth-child(2) {
+  margin-bottom: 2px;
+}
+.map-contact p:nth-child(3) {
+  margin-bottom: 24px;
+}
 
-.map-contact>b {
-  color: #323232;
+.map-contact b {
   font-size: 18px;
   font-weight: 700;
   line-height: 24px;
 }
+.map-contact b:nth-child(2){
+  display: block;
+  margin-top: 7px;
+/*  margin-bottom: 5px;*/
+}
 
 .feedback-form {
-  /*  display: none;*/
+  /* Style for "Подложка" */
+position: absolute;
+top: 0;
+right: 250px;
+width: 317px;
+height: 276px;
+border-radius: 10px;
+background-color: #f8f7f4;
+/*    display: none;*/
 }
 
 .main-footer {
@@ -1430,6 +1443,7 @@ label {
 
 .email-btn {
   display: inline-block;
+  border: none;
   width: 129px;
   height: 44px;
   box-shadow: 0 2px 2px rgba(172, 16, 0, 0.64);
@@ -1457,13 +1471,14 @@ label {
   border: 0;
   border-radius: 15px;
 }
+
 .main-filter h1 {
-color: #ffffff;
-font-family: Roboto;
-font-size: 35px;
-font-weight: 700;
-line-height: 41px;
-  margin:0;
+  color: #ffffff;
+  font-family: Roboto;
+  font-size: 35px;
+  font-weight: 700;
+  line-height: 41px;
+  margin: 0;
   margin-bottom: 25px;
 }
 
@@ -1474,4 +1489,88 @@ line-height: 41px;
 .item-margin {
   width: 100%;
   margin-bottom: 13px;
+}
+
+.about-icecream::before {
+  content: "";
+  display: block;
+  position: absolute;
+  background-image: url(../img/spritesheet.png);
+  background-repeat: no-repeat;
+  width: 49px;
+  height: 49px;
+  background-position: -63px -5px;
+  top: -14px;
+  left: -56px;
+}
+
+.about-cow::before {
+  content: "";
+  display: block;
+  position: absolute;
+  background-image: url(../img/spritesheet.png);
+  background-repeat: no-repeat;
+  top: -14px;
+  left: -56px;
+  width: 48px;
+  height: 49px;
+  background-position: -5px -5px;
+}
+.about-leaf::before {
+  content: "";
+  display: block;
+  position: absolute;
+  background-image: url(../img/spritesheet.png);
+  background-repeat: no-repeat;
+  top: -14px;
+  left: -56px;
+  width: 49px;
+    height: 49px;
+    background-position: -122px -5px; 
+}
+
+.about-thermometer::before {
+  content: "";
+  display: block;
+  position: absolute;
+  background-image: url(../img/spritesheet.png);
+  background-repeat: no-repeat;
+  top: -14px;
+  left: -56px;
+  width: 48px;
+    height: 49px;
+    background-position: -181px -5px;
+  
+}
+
+.wrapper-map-contact {
+  display: flex;
+  justify-content: flex-end;
+  padding: 62px 27px 0 0;
+  
+  
+/*
+    margin-left: auto;
+    
+*/
+}
+
+.open-feedback-form {
+  border: none;
+width: 252px;
+height: 44px;
+box-shadow: 0 2px 2px rgba(172, 16, 0, 0.64);
+background-color: #e84d37;
+background-image: linear-gradient(to top, #e74a35 0%, #f26843 100%);
+  
+
+color: #fefefe;
+font-size: 18px;
+font-weight: 700;
+line-height: 24px;
+}
+
+.feedback-form-wrapper {
+  position: relative;
+  
 }
