--- a/css/style.css
+++ b/css/style.css
@@ -414,14 +414,13 @@ height: 44px;
   padding: 10px;
   box-sizing: border-box;
   position: absolute;
-  top: 70px;
+  top: 60px;
   right: 150px;
    display: none;
 }
 
-.search:hover .search-form {
+.search:hover+.search-form {
   display: block;
-/*    z-index: 500;*/
 }
 
 .search-form input {
@@ -446,16 +445,38 @@ height: 44px;
 .login-form {
   display: none;
   position: absolute;
-  top: 0;
-  left: 0px;
+  top: 120px;
+  right: 0px;
   width: 277px;
   height: 214px;
   box-shadow: 0 20px 20px rgba(0, 0, 0, 0.4);
   border-radius: 5px;
   background-color: #f8f7f4;
 }
+.login-form input {
+width: 241px;
+height: 44px;
+border-radius: 4px;
+border: 1px solid #d3d3d2;
+background-color: #ffffff;
+  
 
-.login:hover .login-form {
+color: #999999;
+
+font-size: 14px;
+font-weight: 400;
+line-height: 24px;
+  margin: 20px 18px;
+  
+}
+.login-form input:nth-child(2) {
+  margin-bottom: 0;
+}
+.login-form button{
+  
+}
+
+.login:hover+.login-form {
   display: block;
 
 }
@@ -776,7 +797,7 @@ height: 44px;
   margin: 0 0px 17px 18px;
   min-height: 332px;
   width: 277px;
-  z-index: 50;
+  z-index: 10;
   margin-bottom: 17px;
 }
 .ice-item img {
@@ -1029,12 +1050,12 @@ height: 44px;
   /* Style for "Подложка" */
 position: absolute;
 top: 0;
-right: 350px;
+right: 50px;
 width: 317px;
 height: 276px;
 border-radius: 10px;
 background-color: #f8f7f4;
-/*    display: none;*/
+    display: none;
 }
 
 .main-footer {
@@ -1212,6 +1233,9 @@ select[name=sort] {
 input[type=range] {
   margin-top: 5px;
   background-color: #a9bab0;
+}
+.container-buttons>label{
+  display: inline-block;
 }
 
 .btn-filter,
@@ -1594,11 +1618,13 @@ font-weight: 700;
 line-height: 24px;
 }
 /*
-.open-feedback-form:hover .feedback-form{
+.open-feedback-form:hover+.feedback-form{
   display: block;
 }
 */
-
+.feedback-hover:hover .feedback-form{
+  display: block;
+}
 
 .feedback-form-wrapper {
   position: relative;
@@ -1606,7 +1632,7 @@ line-height: 24px;
   
 }
 .feedback-form-wrapper input {
-  margin: 0 25px 10px 25px;
+  margin: 10px 25px 10px 25px;
 width: 267px;
 height: 44px;
 border-radius: 4px;
@@ -1621,15 +1647,98 @@ line-height: 24px;
 }
 
 .feedback-form-wrapper label {
+  position: absolute;
+  top: 10px;
+  left: 10px;
   
 margin-left: 39px;
 color: #5b9ddf;
 font-size: 11px;
 font-weight: 400;
 line-height: 13px;
- visibility: hidden;
+/* visibility: hidden;*/
 }
 
-.feedback-form-wrapper input:active .feedback-form-wrapper label {
-visibility: visible;
+
+
+.send-feedback-btn {
+border: none;
+
+width: 150px;
+height: 44px;
+box-shadow: 0 1px 2px #ac1000;
+background-color: #e84d37;
+background-image: linear-gradient(to top, #e74a35 0%, #f26843 100%);
+
+color: #fefefe;
+font-size: 18px;
+font-weight: 700;
+line-height: 24px;
+  
+  margin: 80px 0 0 80px;
+  
+}
+
+
+
+.pagnition {
+  
+    float: right;
+    margin: 51px 21px 51px;
+    padding: 0;
+    list-style: none;
+    font-size: 0;
+
+}
+
+.pagnition-active {
+ 
+    border-radius: 50%;
+}
+.pagnition a {
+    display: block;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 50%;
+}
+
+
+
+.pagnition li {
+    display: inline-block;
+    width: 26px;
+    height: 26px;
+    margin: 0 0 0 3px;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 26px;
+    text-align: center;
+    color: rgba(255,255,255,0.2);
+}
+.pagnition a:active, li.pagnition-active {
+    color: #323232;
+    background-color: #ffffff;
+}
+
+
+
+
+
+.footer-catalog {
+  padding: 0;
+}
+
+.login-website {
+/*display: inline-block;*/
+width: 100px;
+height: 44px;
+box-shadow: 0 1px 2px #ac1000;
+background-color: #e84d37;
+background-image: linear-gradient(to top, #e74a35 0%, #f26843 100%);
+  
+font-size: 18px;
+font-weight: 700;
+line-height: 24px;
+  margin: 15px;
+  
 }
